# Aya

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.clang  Dockerfile.gcc  FORK_COMBINE.md  LICENSE  ProduceLib.sh  README.md  aya_demo.cpp  aya_par_bench  aya_parallel.hpp  aya_parallel_benchmark.cpp  aya_tests  aya_v2.hpp  aya_v2_parallel.hpp  aya_v2_parallel_benchmark.cpp  aya_v2_tests.cpp  build.py  clean_cmake.ps1  clean_cmake.sh  docker-compose.yml  run_all_benchmarks.sh  run_tests.sh  test.sh
.github/workflows/: ci.yml
Aya/: CMakeLists.txt  ProduceLib.sh  README.md  build.py
Aya/Docs/: Building_From_Library.md
Aya/performed-tests/: AcosTest.txt  AcosTestHighPrecision.txt  AsinTest.txt  AsinTestHighPrecision.txt  AtanTest.txt  AtanTestHighPrecision.txt  BorkenTaxTest.txt  CMakeCache.txt  CMakeLists.txt  Cosine2Test.txt  Cosine2TestHighPrecision.txt  CosineTest.txt  EncodingTest.txt  ExpTest.txt  ExpTestHighPrecision.txt  LogTest.txt  LogTestHighPrecision.txt  Mul2Test.txt  PowerFuncTest.txt  PowerFuncTestHighPrecision.txt  RootTest.txt  RootTestHighPrecision.txt  Sine2Test.txt  Sine2TestHighPrecision.txt  SineTest.txt  TanTest.txt  TanTestHighPrecision.txt  TaxTest.txt
Aya/src/common/: CartesianIterator.cpp  CartesianIteratorTests.h  InputGenerator.hpp  util-tests.cpp  util.cpp  util.hpp
Aya/src/core/IntegrationTests/: MetamorphicRelationGenTests.hpp
Aya/src/core/IntegrationTests/TestUtils/: TransformerFunctions.hpp
Aya/src/public/: CartesianIterator.h  CompositeCartesianIterator.h  CoreUtilities.hpp  MRBuilder.hpp  MRContext.hpp  MetamorphicRelation.hpp  TransformBuilder.hpp  transformer.hpp  tuple-utils.h
Aya/test/: testMain.cpp
Aya/test/AyaSamples/: AyaCore.h  DoubleDoubleTest.hpp  DoubleTypeTransformers.hpp  LinalgTest.hpp  PowTest.hpp  SineTest.hpp  StandardMathTest.hpp  TextConversionTests.hpp  TrigTest.hpp  TripleDoubleTest.hpp  main.cpp
Aya/test/AyaSamples/LinalgUtils/: LinalgTransformers.hpp
Aya/test/AyaSamples/TextConversionUtils/: iconv.hpp
Aya/test/Framework/: testRunner.cpp  testRunner.h  testRunnerUtils.h
AyaSamples/: CMakeLists.txt  DoubleTypeTransformers.hpp  SineTest.hpp  main.cpp
AyaSamples/lib/: MRBuilder.hpp  MRContext.hpp  MetamorphicRelation.hpp  TransformBuilder.hpp  transformer.hpp  tuple-utils.h
Tools/: lib_update.py  transformGen.py  updateCodegenFiles.sh
ayaBuild/: MRBuilder.hpp  transformer.hpp
include/: Aya.hpp
include/internal/: CartesianIterator.hpp  CompositeCartesianIterator.hpp  CoreUtilities.hpp  MRBuilder.hpp  MRContext.hpp  MetamorphicRelation.hpp  TransformBuilder.hpp  Transformer.hpp  TransformerFunctionRegistry.hpp  TransformerPool.hpp
projects/aya-jpeg/: .gitignore  CMakeLists.txt  Dockerfile  README.md  jpeg_mr_test.cpp  jpeg_transformers.hpp  jpeg_utils.hpp  run_test.sh  sample_image_gen.hpp
projects/aya-jpeg/results/psnr_20/: stb_results.csv  turbo_results.csv
projects/aya-jpeg/results/psnr_25/: stb_results.csv  turbo_results.csv
projects/aya-jpeg/results/psnr_30/: stb_results.csv  turbo_results.csv
projects/aya-jpeg/results/psnr_35/: stb_results.csv  turbo_results.csv
projects/aya-jpeg/results/psnr_40/: stb_results.csv  turbo_results.csv
projects/aya-jpeg/test_images/: download_images.sh
projects/benchmarks/: Dockerfile
src/: CMakeLists.txt  Makefile  aya.hpp  aya_parallel.hpp  aya_tests.cpp  cmake_install.cmake
src/common/: CartesianIterator.cpp  CartesianIterator.h  CartesianIteratorTests.cpp  CartesianIteratorTests.h  CompositeCartesianIterator.cpp  CompositeCartesianIterator.h  aya-types.h  tuple-utils.h  util-tests.cpp  util-tests.h  util.cpp  util.h  util.hpp
src/core/: functionState.h  metamorphicRelation-tests.cpp  metamorphicRelation-tests.h  metamorphicRelation.h  mrContext.h  mrSearch.cpp  mrSearch.h  testableFunction-tests.cpp  testableFunction-tests.h  testableFunction.h  transformer-tests.cpp  transformer-tests.h  transformer.h
src/core/IntegrationTests/: MetamorphicRelationGenTests.hpp  metamorphicRelation-tests.cpp  metamorphicRelation-tests.h
src/core/IntegrationTests/TestUtils/: TransformerFunctions.hpp
src/core/Modules/Callable/: ArgumentPack.hpp  TestContext.hpp  TestContextTests.cpp  TestContextTests.hpp  TestableFunction.hpp  testableFunction-tests.cpp  testableFunction-tests.h  testableFunction.h  transformer-tests.cpp  transformer-tests.h  transformer.h
src/core/Modules/MRGenerator/: MRBuilder.cpp  MRBuilder.h  MRBuilder.hpp  MRBuilderInternal.hpp  MRContext.hpp  MetamorphicRelation.hpp  TestContext.hpp  TestContextTests.cpp
src/core/Modules/Transformer/: TransformBuilder.hpp  transformer-tests.cpp  transformer-tests.h  transformer.h  transformer.hpp
src/public/: AyaCore.h  MRBuilder.hpp
src/samples/math/: CMakeLists.txt  DoubleTypeTransformers.hpp  InputGenerator.hpp  LinalgTest.hpp  LinalgTransformers.hpp  StandardMathTest.hpp  Stopwatch.hpp  main.cpp
src/samples/stl/: CMakeLists.txt  StlTests.hpp  TransformerFunctions.hpp  main.cpp
test/: AyaTest  CMakeLists.txt  testMain.cpp  testRunner.cpp  testRunner.h
test/Framework/: testRunnerTests.cpp  testRunnerTests.h
test/framework/: testRunner.cpp  testRunner.h  testRunnerUtils.h
