cmake_minimum_required(VERSION 3.28)

set(CMAKE_CXX_STANDARD 17)
if(APPLE)
    set(LIBRARY_EXTENSION "dylib")
elseif(UNIX AND NOT APPLE)
    set(LIBRARY_EXTENSION "so")
elseif(WIN32)
    set(LIBRARY_EXTENSION "dll")
else()
    message(FATAL_ERROR "Unsupported platform")
endif()

add_executable(AyaTest testMain.cpp framework/testRunnerTests.cpp framework/testRunner.cpp ../src/common/util.cpp ../src/common/util-tests.cpp ../src/core/testableFunction.cpp ../src/core/testableFunction-tests.cpp)
target_link_libraries(AyaTest m)